<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac1"
    tools:context=".DepartmentsActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/vsbtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/vlsi_design"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mechbtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/mech"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/depbtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/cse"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ecebtn"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eeebtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/eee"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mechbtn"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/civilbtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/civil"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/aibtn"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/csebtn1"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/cse"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/esbtn"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pebtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/power_electroincs"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vsbtn"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/esbtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/embedded_systems"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aibtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/ai_and_data_science"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ecebtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:text="@string/ece"
        android:textColor="#D1C9C9"
        app:icon="@drawable/ic_baseline_account_tree_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ug_courses"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pg_courses"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />
</androidx.constraintlayout.widget.ConstraintLayout>